feat(game-resources): add catalog slice
